# AIS

./: CMakeLists.txt
include/: align.h  args.h  calibrate.h  errors.h  img.h  imgio.h  interpolate.h  stack.h  vec.h
src/align/: align.c  alignPrivate.h  circlePatternAlign.c  circlePatternAlign.h  noAlign.c  starThresholdAlign.c  starThresholdAlign.h
src/args/: args.c  argsPrivate.h
src/calibrate/: calibrate.c  calibratePrivate.h
src/core/: main.c
src/img/: img.c  imgPrivate.h
src/imgio/: imgio.c  imgioPrivate.h
src/interpolate/: bilinear.c  bilinear.h  interpolate.c  interpolatePrivate.h
src/stack/: stack.c
src/vec/: vec.c
